test/classes/vass/method-def-with-type-binding-error-union-1.chpl
union U {
  var i:int; var r:real;
  def W.uu() {}
}
